# pipeline-penguin

./: .gitignore  Chave_bq.json  MANIFEST.in  PP_Validation_Engine.py  PP_Validation_Node.py  Pipeline_Penguin.py  Pipfile  README.md  autoline.json  delete_me.py  dp6-estudos-37e8884e897d.json  push_git_changes.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  use_pp.py
deploy_terraform/: terraform_deploy.sh
docs/: index.html  index.md  pipeline_penguin.html  search.json
pipeline-penguin/: DataNode.py  NodeManager.py  __init__.py  data_node_bigquery.py  pipeline_penguin.py
pipeline_penguin/: DataNode.py  DataNodeBigQuery.py  __init__.py  config.py  connector.py  connector_manager.py  connector_sql.py  connector_sql_bigquery.py  data_node.py  data_node_bigquery.py  data_premise.py  data_premise_sql.py  data_premise_sql_check_null.py  exceptions.py  node_manager.py  pipeline_penguin.py
test/: TestPipelinePenguin.py  __init__.py  test.py  test_connector.py  test_connector_manager.py  test_connector_sql.py  test_connector_sql_bigquery.py  test_data_node.py  test_data_node_bigquery.py  test_data_premise.py  test_data_premise_check_arithmetic.py  test_data_premise_check_between.py  test_data_premise_check_comparison.py  test_data_premise_check_distinct.py  test_data_premise_check_in.py  test_data_premise_check_like.py  test_data_premise_check_null.py  test_data_premise_check_regex.py  test_data_premise_check_regexp.py  test_node_manager.py  test_output_formatter.py  test_output_manager.py  test_pipeline_penguin.py  test_premise_output.py
(+139 files in other folders)
