[metadata]
name = pipeline-penguin
version = 0.1.0
author = DP6
author_email = bruno.munhoz@dp6.com.br
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DP6/pipeline-penguin
project_urls =
    Bug Tracker = https://github.com/DP6/pipeline-penguin/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    pandas-gbq

[options.packages.find]
exclude = 
    test

